--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/btn_contributors"/>
+
+    <Button
+        android:id="@+id/btn_hotnews"
+        android:layout_width="180dp"
+        android:layout_height="54dp"
+        android:onClick="fetchData"
+        android:text="Hot News"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_contributors"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
