--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/btn_contributors"/>
+        android:id="@+id/btn_contributors"
+        app:layout_constraintVertical_bias="0.194"/>
 
     <Button
         android:id="@+id/btn_hotnews"
@@ -31,5 +32,18 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         />
+
+    <Button
+        android:id="@+id/btn_jinyifanyi"
+        android:layout_width="180dp"
+        android:layout_height="54dp"
+        android:onClick="fetchData"
+        android:text="Jinyi Fanyi"
+        android:layout_marginTop="34dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_hotnews"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
