--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,11 @@
         />
 
     <Button
-        android:id="@+id/btn_jinyifanyi"
+        android:id="@+id/btn_today_weather"
         android:layout_width="180dp"
         android:layout_height="54dp"
         android:onClick="fetchData"
-        android:text="Jinyi Fanyi"
+        android:text="Today Weather"
         android:layout_marginTop="34dp"
         app:layout_constraintTop_toBottomOf="@+id/btn_hotnews"
         android:layout_marginLeft="8dp"
